syntax = "proto3";

option csharp_namespace = "Gateway.gRPC.Client.ShippingClientProto";

service Shipping {
	//Done
	rpc CreateNewShipment (GrpcNewShipmentRequest) returns (GrpcVoid);
	rpc GetShipmentById (GrpcString) returns (GrpcShipment);
	rpc GetShipmentEvents (GrpcString) returns (GrpcShipmentEvents);
	rpc SetShipmentAutoUpdate (GrpcSetAutoUpdateRequest) returns (GrpcVoid);
	rpc SearchShipments (GrpcShipmentSearchRequest) returns (GrpcShipmentList);
	rpc DeleteShipment (GrpcString) returns (GrpcVoid);

	rpc GetPackageById (GrpcString) returns (GrpcPackage);

	rpc RunAutoUpdate (GrpcVoid) returns (GrpcVoid);
	rpc RunAutoUpdateById (GrpcString) returns (GrpcVoid);

	rpc GetIsMarketplaceSaleIdRegistered (GrpcString) returns (GrpcBoolean);
}

// requests
message GrpcNewShipmentRequest {
	string tracking_code = 1;
	string bound_marketplace = 2;
	string marketplace_account_id = 3;
	string marketplace_sale_id = 4;
	string shipping_implementation = 5;
	bool set_auto_update = 6;
	bool set_created_manually = 7;
	GrpcNewPackageRequest package_data = 8;
}

message GrpcNewPackageRequest {
	string name = 1;
	int32 weight_in_grams = 2;
	int32 width_in_mm = 3;
	int32 height_in_mm = 4;
	int32 length_in_mm = 5;
	repeated string content_ids = 6;
}

message GrpcShipmentSearchRequest {
	GrpcPagination pagination = 1;
	int32 sorting = 2;
	GrpcBooleanFilter is_posted = 3;
	GrpcBooleanFilter is_being_transported = 4;
	GrpcBooleanFilter is_awaiting_for_pick_up = 5;
	GrpcBooleanFilter is_delivered = 6;
	GrpcBooleanFilter is_delivered_to_destination = 7;
	GrpcBooleanFilter is_rejected = 8;
	GrpcBooleanFilter auto_update = 9;
	GrpcStringFilter dynamic_string = 10;
	GrpcStringFilter bound_marketplace = 11;
	string shipping_implementation = 12;
}

message GrpcSetAutoUpdateRequest {
	string id = 1;
	bool toggler = 2;
}

//responses

// models
message GrpcVoid {

}

message GrpcString {
	string value = 1;
}


message GrpcBoolean {
	bool value = 1;
}


message GrpcShipment {
	string id = 1;
	string package_id = 2;
	string tracking_code = 3;
	string boundry_implementation = 4;
	string bound_marketplace = 5;
	string marketplace_account_id = 6;
	string marketplace_sale_id = 7;
	bool auto_update = 8;
	bool created_manually = 9;
	GrpcShipmentStates states = 10;
	string created_at = 11;
	string boundry_message = 12;
}

message GrpcShipmentStates {
	bool is_posted = 1;
	bool is_delivered = 2;
	bool is_delivered_to_destination = 3;
	bool is_rejected = 4;
	bool is_awaiting_for_pick_up = 5;
	bool is_being_transported = 6;
}
//shipment events
message GrpcShipmentEvents {
	GrpcCreatedEvent created_event = 1;
	GrpcPostedEvent posted_event = 2;
	GrpcAwaitingForPickUpEvent awaiting_for_pick_up_event = 3;
	GrpcRejectedEvent rejected_event = 4;
	GrpcDeliveredEvent delivered_event = 5;
	repeated GrpcForwardingEvent forwarding_events = 6;
}

message GrpcCreatedEvent {
	string title = 1;
	string description = 2;
	string occurred_at = 3;
}

message GrpcPostedEvent {
	string title = 1;
	string description = 2;
	string occurred_at = 3;
	bool is_posted = 4;
}

message GrpcAwaitingForPickUpEvent {
	string title = 1;
	string description = 2;
	string occurred_at = 3;
	bool is_set = 4;
	GrpcLocation location = 5;
}

message GrpcRejectedEvent {
	string title = 1;
	string description = 2;
	string occurred_at = 3;
	bool is_rejected = 4;
}

message GrpcDeliveredEvent {
	string title = 1;
	string description = 2;
	string occurred_at = 3;
	bool is_delivered = 4;
	bool is_delivered_to_destination = 5;
}

message GrpcForwardingEvent {
	string title = 1;
	string description = 2;
	string boundry_message = 3;
	bool package_has_arrived = 4;
	string occurred_at = 5;
	string arrived_at = 6;
	GrpcLocation forwarded_from = 7;
	GrpcLocation forwarded_to = 8;
}


message GrpcShipmentList {
	GrpcPagination pagination = 1;
	string sorting = 2;
	repeated GrpcShipment data = 3;
}

message GrpcPackage {
	string id = 1;
	string name = 2;
	int32 weight_in_grams = 3;
	int32 width_in_mm = 4;
	int32 height_in_mm = 5;
	int32 length_in_mm = 6;
	repeated string content_ids = 7;
}

message GrpcPackageList {
	repeated GrpcPackage data = 1;
	GrpcPagination pagination = 2;
}

message GrpcLocation {
	string state = 1;
	string city = 2;
	string streetName = 3;
	string cep = 4;
	int32 streetNumber = 5;
}

message GrpcPagination {
	int32 offset = 1;
	int32 limit = 2;
	int64 total = 3;
}

message GrpcRoutineStates {
	bool isInitialized = 1;
	bool isExecuting = 2;
	bool isPaused = 3;
	string lastExecutedAt = 4;
	string nextExecutionAt = 5;
}

// search filters
message GrpcBooleanFilter {
	bool isActive = 1;
	bool value = 2;
}

message GrpcStringFilter {
	bool is_active = 1;
	string value = 2;
}